fixed bug in container overflow that hid menu on screen resize

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -122,7 +122,7 @@ nav {
 // Blog Section
 .container {
 	max-width: 80rem;
-	overflow: hidden;
+	//overflow: hidden;
 }
 
 #posts {
@@ -235,7 +235,7 @@ footer {
 // Contact Page
 
 #contact {
-	padding: 20px;
+	//padding: 20px;
 	width: 100%;
 	color: map-get($colors, 'light_text');
 	background-image: url('http://www.entertainmentmaine.com/wp-content/uploads/2016/11/slash_it.png');
